# Mandelbrot

./: .clang-format  .gitignore  CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  bm_mandelbrot.cpp
cmake/: mandelbrotConfig.cmake  mandelbrotConfig.cmake.in
examples/: CMakeLists.txt  greyscale.cpp  rainbow.cpp
include/: backends.hpp  mandelbrot.hpp  mandelbrot_engine.hpp  mandelbrot_omp.hpp  mandelbrot_renderer.hpp  mandelbrot_result.hpp  mandelbrot_serial.hpp  resources.hpp  utility.hpp
src/: CMakeLists.txt  main.cpp  mandelbrot_avx2.cpp  mandelbrot_avx2_omp.cpp  mandelbrot_avx512.cpp  mandelbrot_avx512_omp.cpp  mandelbrot_cuda.cu  mandelbrot_omp.cpp  mandelbrot_serial.cpp  utility.cpp  utility_avx.cpp  utility_avx512.cpp
